# Jarvis

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  jarvis-frontier-upgrade.md  jarvis-implementation-plan.md
.githooks/: pre-commit
backend/: Dockerfile  constraints.txt  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_langgraph_checkpoints.py  003_email_logs_meta.py  004_audit_trail_latency.py  005_system_alerts.py  006_email_log_provider.py  007_actionable_items.py  008_briefing_hwm.py  009_briefing_items.py  010_morning_briefs.py  011_briefing_checkin_state.py  012_approval_outcome.py  013_profile_timezone.py
backend/app/: approvals_service.py  briefing.py  config.py  main.py
backend/app/agent/: answer_consumption.py  approval_dispatch.py  approval_drain.py  approval_essentials.py  briefing_state.py  context.py  decision_resolver.py  graph.py  master_tz.py  message_repair.py  nodes.py  prompts.py  rate_limits.py  runner.py  safety.py  sanitizer.py  state.py
backend/app/agent/tools/: __init__.py  actionable_tool.py  approvals_pending.py  briefing_tool.py  builtin_memory.py  calendar_tool.py  document_search.py  email_history.py  email_send.py  gmail_send.py  profile_tool.py  readiness_tool.py  registry.py
backend/app/api/: activity.py  approvals.py  briefing.py  chat.py  costs.py  documents.py  health.py  memory.py  router.py  system.py  voice.py  weather.py
backend/app/api/webhooks/: __init__.py  gmail.py  telegram.py
backend/app/db/: engine.py  models.py  test_provisioning.py
backend/app/documents/: __init__.py  chunker.py  contextualizer.py  extractors.py  ingestion.py  reranker.py  search.py
backend/app/email/: __init__.py  approval_handler.py  classifier.py  digest.py  gmail_approval_handler.py  gmail_pubsub.py  gmail_watch.py  inbound.py  responder.py  send.py
backend/app/email/provider/: __init__.py  base.py  gmail.py  outlook.py
backend/app/llm/: bootstrap.py  cost_tracker.py  eval_mode.py  fallback_llm.py  gateway.py  leak_sanitize.py  models.py  observability.py  stream_mode.py
backend/app/memory/: consolidation.py  extraction.py  manager.py  mem0_client.py  noise_purge.py  session.py  user_profile.py
backend/app/messaging/: channel.py  channel_registry.py  failure_alerter.py  normalizer.py  router.py
backend/app/messaging/channels/: telegram.py
backend/app/scheduler/: __init__.py  beat_schedule.py  celery_app.py  task_helpers.py  task_wrapper.py
backend/app/scheduler/tasks/: __init__.py  approval_expiry.py  email_check.py  email_renew.py  gmail_check.py  gmail_renew.py  inbound_health.py  memory_consolidation.py  morning_brief.py
backend/app/security/: __init__.py  auth.py  webhook_verify.py
backend/app/utils/: exceptions.py  llm_health.py  logging.py  runtime_stats.py
backend/app/voice/: __init__.py  chunker.py  markdown_strip.py  transcribe.py  tts.py  wakeword.py
backend/evals/: compare.py  golden_queries.yaml  runner.py
backend/evals/results/: baseline.json
backend/scripts/: _smoke_isolation.py  eval_tool_routing.py  gen_architecture.py  google_oauth.py  issue_jwt.py  repair_poisoned_thread.py  reset_thread.py  seed_profile.py  setup_gmail_watch.py  smoke_agent.py  smoke_documents.py  smoke_email_triage.py  smoke_extractors.py  smoke_fallback_chain.py  smoke_langfuse_nodes.py  smoke_llm.py  smoke_mem0_rpm.py  smoke_memory.py  smoke_observability.py  smoke_rag.py  smoke_telegram_route.py  smoke_tools.py  verify_prod_untouched.py
backend/tests/: conftest.py  coverage_baseline.txt  test_a1_natural_loop.py  test_a2_batch31_edit_fixes.py  test_a2_d33_edit_no_misinformed_consent.py  test_a2_s1a_approval_message.py  test_a2_s1b2_briefing_ingraph.py  test_a2_s1b_essentials.py  test_a2_s1c_compaction_guard.py  test_a2_s2_consent_over_conversation.py  test_a2_s4_registry_promotions.py  test_actionable_tools.py  test_announce_approval.py  test_approval_dispatch.py  test_approval_drain.py  test_approval_outcome.py  test_approvals_decide.py  test_approvals_pending_tool.py  test_approvals_queue.py  test_b1_answer_consumption.py  test_b1_brief_deterministic.py  test_b1_step2_consume.py  test_b1_tz_render.py  test_briefing.py  test_briefing_cutover.py  test_briefing_scopes.py  test_briefing_state.py  test_calendar_period.py  test_calendar_tool.py  test_capability_recital.py  test_card_resolution_graph.py  test_card_resolution_node.py  test_card_resolution_referent_seal.py  test_chat_history_payload.py  test_chat_send_uncertain.py  test_compaction.py  test_contextualizer.py  test_cost_cap_enforcement.py  test_d22_poison_regression.py  test_d24_dedup_no_solicit.py  (+47 more)
backend/tests/harness/: README.md  __init__.py  capture.py  ledger_map.py  sweep_check.py  test_sweep_check.py
backend/tests/integration/: conftest.py  test_cross_source_recall.py  test_email_flow.py
backend/tests/live_behavior/: conftest.py  test_consent_rates.py
backend/tests/regression/: conftest.py  test_consent_journeys.py
docs/architecture/: README.md  decisions.md
docs/audit/: phase1_pivot_report.md  phase2_ideal_design.md  phase3_verdict.md  phase4_convergence_map.md
frontend/: .env.example  package-lock.json  package.json
frontend/public/: manifest.webmanifest  wake-worklet.js
frontend/src/: auth.config.ts  auth.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: ApprovalCard.tsx  BootSequence.tsx  BriefingCard.tsx  ChatPanel.tsx  CircuitBackdrop.tsx  ContextMeterBar.tsx  HudControls.tsx  MarkdownMessage.tsx  Orb.tsx  OrbCanvas.tsx  PlaceholderWidget.tsx  UploadChip.tsx  WidgetCard.tsx
frontend/src/lib/: approvalQueue.test.ts  approvalQueue.ts  backend.ts  boot.ts  briefingFormat.test.ts  briefingFormat.ts  dashboardLayout.ts  health.ts  streamRender.test.ts  streamRender.ts  types.ts  useChatStream.ts  useJarvis.ts  usePolledJSON.ts  useSpeechInput.ts  useVoiceLoop.ts  useWakeWord.ts  voiceConfig.ts  voiceMachine.test.ts  voiceMachine.ts
infra/postgres/: init.sql
scripts/: check_alembic_history.py
(+25 files in other folders)
