[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-backend"
version = "0.1.0"
description = "Personal AI agent — LangGraph-orchestrated, multi-channel, locally hosted."
requires-python = ">=3.12"
authors = [{ name = "Mahesh Babu Muppasani" }]
license = { text = "Proprietary" }

dependencies = [
    # Web framework — PINNED to the current working set (locked together with
    # constraints.txt, which the Dockerfile installs with `-c`). These are
    # unpinned-upgrade-prone (see project_unpinned_deps_uncontrolled_upgrade:
    # an edge-tts rebuild silently took fastapi 0.115→0.137 + starlette 0.x→1.x).
    # Bump deliberately + re-freeze constraints.txt + re-run the suite.
    "fastapi==0.137.1",
    "starlette==1.3.1",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",

    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.0",

    # Redis + Celery
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",

    # LLM (provider-agnostic — supports 100+ providers via LiteLLM). PINNED (see
    # the web-framework note above — litellm is on the same uncontrolled-upgrade path).
    "litellm==1.89.0",

    # LangGraph (agent orchestration — replaces custom ReAct loop)
    "langgraph>=1.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",   # AsyncPostgresSaver for durable graph state
    "langchain-litellm>=0.2.0",               # ChatLiteLLM — bridges LiteLLM into LangGraph
    # langchain + langchain-core PINNED to the 0.3.x line. Why:
    #   - langfuse 2.60.10 (which we keep because LiteLLM 1.83 is hardcoded
    #     against langfuse v2's `sdk_integration=` kwarg) ships its
    #     CallbackHandler against `from langchain.callbacks.base import
    #     BaseCallbackHandler`. That submodule was removed when langchain
    #     went to 1.x — moved out and never re-exported by langchain-classic
    #     or langchain-community.
    #   - langgraph 1.1.10 has no upper bound on langchain-core, so it works
    #     fine against the 0.3.x line (verified empirically).
    #   - Pinning both together avoids pip's resolver picking incompatible
    #     pairs across the 0.3↔1.x boundary.
    # When LiteLLM upstream catches up to langfuse v3+/v4 SDK, we can lift
    # both pins and switch to `from langfuse.langchain import CallbackHandler`.
    "langchain>=0.3.0,<0.4.0",
    "langchain-core>=0.3.85,<1.0.0",

    # Observability
    # Pinned to the v2 line. LiteLLM 1.83.x's integration calls
    # `Langfuse(sdk_integration=...)` which was removed in v3 SDK; v4 also
    # renamed the `langfuse.version` module path. Stays on 2.x until LiteLLM
    # ships v3+ compatibility upstream.
    "langfuse>=2.50.0,<3.0.0",
    "cachetools>=5.3.0",                      # Public-key cache for Pub/Sub JWT verifier (Task 4.16)

    # Memory
    "mem0ai>=0.1.0",
    "ollama>=0.4.0",                          # Mem0's OllamaEmbedding wraps this client

    # MCP (client side; servers use fastmcp inside their own containers)
    "mcp>=1.0.0",

    # Telegram
    "python-telegram-bot>=21.0",

    # Google APIs (Gmail + Calendar share these)
    "google-api-python-client>=2.150.0",
    "google-auth>=2.30.0",                    # id_token verifier used by verify_gmail_webhook
    "google-auth-oauthlib>=1.2.0",
    "google-cloud-pubsub>=2.25.0",

    # Document ingestion (RAG pipeline)
    "pymupdf>=1.24.0",                        # PDF text extraction
    "python-docx>=1.1.0",                     # Word doc extraction
    "openpyxl>=3.1.0",                        # Excel extraction
    "tiktoken>=0.7.0",                        # Token-aware text chunking

    # Reranking (RAG retrieval quality) — bge-reranker-v2-m3 via sentence-transformers
    # CrossEncoder (CPU-friendly). Was FlagEmbedding, but FlagEmbedding 1.4.0's
    # tokenizer path broke under the transformers 5.x that sentence-transformers/peft
    # pin; CrossEncoder loads the same weights and works with that stack. Upper bound
    # guards against a future major silently breaking the loader the same way.
    "sentence-transformers>=5.0,<6",

    # Voice (Phase 4 — streaming TTS). Piper (local jgkawell/jarvis "JARVIS"
    # voice, model baked into the image) is the default; edge-tts (free cloud
    # British male) is the fallback. ElevenLabs is deliberately NOT wired (the
    # voice research doc rules it out as a low-cost path).
    "piper-tts>=1.4.0",
    "edge-tts>=6.1.0",
    # Wake-word (Phase 4.2) — server-side openWakeWord on the built-in "hey
    # jarvis" model (wheel-bundled, runs via onnxruntime). 0.4.0 fits the locked
    # stack (0.6.0 would re-float numpy/onnxruntime). Pretrained weights are
    # CC-BY-NC-SA (NonCommercial) — fine for personal use; a commercial build
    # needs a self-trained model.
    "openwakeword>=0.4.0",

    # Utils
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "cryptography>=43.0.0",
    "python-jose[cryptography]>=3.3.0",
    "tenacity>=9.0.0",
    "rank_bm25>=0.2.2",                       # BM25 for hybrid search
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]

# Explicit package discovery — without this, setuptools' auto-discovery is undefined
# when the `app/` directory is empty (e.g. during the cold Docker build before any
# code is COPY'd). Including `"app*"` lets the editable install register before code
# arrives; setuptools is happy with an empty package shell.
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (formatter handles it)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Line-coverage config (Turn 20.5 task y). Config only — NO CI gate yet; the
# gate lands with the Phase-4 CI pipeline, once a stable baseline exists post
# closeout-v/w. Run: `make coverage` (or pytest --cov=app).
[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
